add mysql db on add prepare option for hhvm

--- a/options.conf
+++ b/options.conf
@@ -34,6 +34,9 @@ VARNISH_CACHE_SIZE=50M
 # Varnish version. Only used for Debian stable or Ubuntu LTS.
 VARNISH_VER=3.0
 
+# Use hhvm
+USE_HHVM=yes
+
 
 #########################################################
 # You may simply use the defaults for the options below #
